add config, env, server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tutorial to learn about Rest API.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.ts"
   },
   "keywords": [
     "Rest API",
@@ -14,10 +14,19 @@
   "author": "Richa Agrawal",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
+    "eslint": "^9.12.0",
+    "globals": "^15.11.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.8.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
   }
 }
