--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restapitutorial",
   "version": "1.0.0",
   "description": "Tutorial to learn about Rest API.",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "dev": "nodemon server.ts"
   },
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.12.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.7.5",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongoose": "^8.7.0"
   }
 }
