--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
+    "@types/mysql": "^2.15.26",
     "@types/node": "^22.7.5",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
@@ -29,6 +30,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "mysql2": "^3.11.3"
   }
 }
