--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.12.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/http-errors": "^2.0.4",
     "@types/mongoose": "^5.11.96",
     "@types/mysql": "^2.15.26",
     "@types/node": "^22.7.5",
@@ -30,6 +31,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.7.0",
     "mysql2": "^3.11.3"
   }
