--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/mysql": "^2.15.26",
     "@types/node": "^22.7.5",
@@ -34,6 +35,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "mysql2": "^3.11.3"
   }
